tc_tests/struct6.fail
struct a {
	int c;
	int b;
	int arr[3];
};

struct b {
    int d;
};

int main()
{
  struct a *x;
  struct a y;
  int i;
  int *j;
  int k;

  y.c = 10;
  y.b = -12;
  x = &y;

  j = x.c; //error

  return y.c + y.b;
}
